--- a/main/resources/view/Attendance.fxml
+++ b/main/resources/view/Attendance.fxml
@@ -1,114 +1,94 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
-<?import javafx.scene.control.DatePicker?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane prefHeight="500.0" prefWidth="800.0" style="-fx-background-color: #007a5e;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse73.ems.mvc.employeemanagementsystem.Controller.AttendanceController">
     <children>
-        <Label layoutX="20" layoutY="20" style="-fx-font-size: 24px; -fx-font-weight: bold;" text="Attendance Management" textFill="WHITE">
-         <font>
-            <Font name="System Bold" size="14.0" />
-         </font></Label>
 
-        <GridPane hgap="20" layoutX="20" layoutY="70" vgap="15">
+        <Label layoutX="20" layoutY="20" text="Attendance Management" textFill="WHITE" style="-fx-font-size: 24px; -fx-font-weight: bold;">
+            <font>
+                <Font name="System Bold" size="14.0"/>
+            </font>
+        </Label>
+
+        <GridPane layoutX="20" layoutY="70" hgap="20" vgap="15">
             <columnConstraints>
-                <ColumnConstraints minWidth="120.0" />
-                <ColumnConstraints minWidth="200.0" />
+                <ColumnConstraints minWidth="120.0"/>
+                <ColumnConstraints minWidth="200.0"/>
             </columnConstraints>
-
             <rowConstraints>
-                <RowConstraints minHeight="30.0" />
-                <RowConstraints minHeight="30.0" />
-                <RowConstraints minHeight="30.0" />
-                <RowConstraints minHeight="30.0" />
-            <RowConstraints />
+                <RowConstraints minHeight="30.0"/>
+                <RowConstraints minHeight="30.0"/>
+                <RowConstraints minHeight="30.0"/>
+                <RowConstraints minHeight="30.0"/>
+                <RowConstraints minHeight="30.0"/>
             </rowConstraints>
-
             <children>
                 <Label text="Attendance ID:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="0">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font></Label>
-                <TextField fx:id="txtAttendanceId" onAction="#attendanceidOnAction" promptText="A001" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+                    <font><Font name="System Bold" size="12.0"/></font>
+                </Label>
+                <TextField fx:id="txtAttendanceId" promptText="A001" GridPane.columnIndex="1" GridPane.rowIndex="0"/>
 
                 <Label text="Employee ID:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="1">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font></Label>
+                    <font><Font name="System Bold" size="12.0"/></font>
+                </Label>
+                <TextField fx:id="txtEmployeeId" promptText="E001" GridPane.columnIndex="1" GridPane.rowIndex="1"/>
 
                 <Label text="Date:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="2">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font></Label>
-                <DatePicker fx:id="datePicker" onAction="#dateOnAction" promptText="2025-04-01" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                    <font><Font name="System Bold" size="12.0"/></font>
+                </Label>
+                <DatePicker fx:id="datePicker" promptText="2025-04-01" GridPane.columnIndex="1" GridPane.rowIndex="2"/>
 
                 <Label text="Check In Time:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="3">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font></Label>
-                <TextField fx:id="txtCheckIn" onAction="#checkinOnAction" promptText="HH:mm" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+                    <font><Font name="System Bold" size="12.0"/></font>
+                </Label>
+                <TextField fx:id="txtCheckIn" promptText="HH:mm" GridPane.columnIndex="1" GridPane.rowIndex="3"/>
 
-                <Label text="Check Out Time:" textFill="WHITE" GridPane.rowIndex="4">
-               <font>
-                  <Font name="System Bold" size="12.0" />
-               </font></Label>
-                <TextField fx:id="txtCheckOut" onAction="#checkoutOnAction" promptText="HH:mm" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-            <TextField fx:id="txtEmployeeId" onAction="#employeeidOnAction" promptText="E001" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                <Label text="Check Out Time:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="4">
+                    <font><Font name="System Bold" size="12.0"/></font>
+                </Label>
+                <TextField fx:id="txtCheckOut" promptText="HH:mm" GridPane.columnIndex="1" GridPane.rowIndex="4"/>
             </children>
         </GridPane>
 
+        <Label layoutX="400.0" layoutY="254.0" text="Status:" textFill="WHITE">
+            <font><Font name="System Bold" size="12.0"/></font>
+        </Label>
+        <ComboBox fx:id="statusId" layoutX="455.0" layoutY="250.0" prefWidth="150.0"/>
 
-        <HBox layoutX="20" layoutY="300" spacing="15" style="-fx-background-color: ;">
+        <HBox layoutX="20" layoutY="300" spacing="15">
             <Button fx:id="btnSave" onAction="#saveOnAction" prefWidth="80" style="-fx-background-color: #ffeaa7;" text="Save" textFill="#1b0000">
-            <font>
-               <Font name="System Bold" size="12.0" />
-            </font></Button>
+                <font><Font name="System Bold" size="12.0"/></font>
+            </Button>
             <Button fx:id="btnUpdate" onAction="#updateOnAction" prefWidth="80" style="-fx-background-color: #00cec9;" text="Update">
-            <font>
-               <Font name="System Bold" size="12.0" />
-            </font></Button>
+                <font><Font name="System Bold" size="12.0"/></font>
+            </Button>
             <Button fx:id="btnDelete" onAction="#deleteOnAction" prefWidth="80" style="-fx-background-color: #ff7675;" text="Delete">
-            <font>
-               <Font name="System Bold" size="12.0" />
-            </font></Button>
-            <Button fx:id="btnClear" onAction="#resetOnAction" prefWidth="80" style="-fx-background-color: #b2bec3;" text="Reset">
-            <font>
-               <Font name="System Bold" size="12.0" />
-            </font></Button>
+                <font><Font name="System Bold" size="12.0"/></font>
+            </Button>
+            <Button fx:id="btnReset" onAction="#resetOnAction" prefWidth="80" style="-fx-background-color: #b2bec3;" text="Reset">
+                <font><Font name="System Bold" size="12.0"/></font>
+            </Button>
         </HBox>
 
-
-        <TableView fx:id="tblAttendance" layoutX="28.0" layoutY="356.0" onSort="#tblOnAction" prefHeight="237.0" prefWidth="1179.0">
+        <TableView fx:id="tblAttendance" layoutX="28.0" layoutY="356.0" prefHeight="120.0" prefWidth="740.0">
             <columns>
-                <TableColumn fx:id="colAttendanceId" prefWidth="283.9999694824219" text="Attendance ID" />
-                <TableColumn fx:id="colEmployeeId" prefWidth="250.0" text="Employee ID" />
-                <TableColumn fx:id="colDate" prefWidth="246.66668701171875" text="Date" />
-                <TableColumn fx:id="colCheckIn" prefWidth="194.0" text="Check In" />
-                <TableColumn fx:id="colCheckOut" prefWidth="203.3333740234375" text="Check Out" />
+                <TableColumn fx:id="colAttendanceId" prefWidth="150.0" text="Attendance ID"/>
+                <TableColumn fx:id="colEmployeeId" prefWidth="150.0" text="Employee ID"/>
+                <TableColumn fx:id="colDate" prefWidth="150.0" text="Date"/>
+                <TableColumn fx:id="colCheckIn" prefWidth="145.0" text="Check In"/>
+                <TableColumn fx:id="colCheckOut" prefWidth="145.0" text="Check Out"/>
             </columns>
         </TableView>
-      <Label layoutX="400.0" layoutY="254.0" text="Status:" textFill="WHITE">
-         <font>
-            <Font name="System Bold" size="12.0" />
-         </font></Label>
-      <ComboBox fx:id="statusId" layoutX="455.0" layoutY="250.0" onAction="#statusOnAction" prefWidth="150.0" />
-      <ImageView fitHeight="51.0" fitWidth="55.0" layoutX="725.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../../../../../Downloads/GREEN%20LOOP.png" />
-         </image>
-      </ImageView>
+
+        <ImageView fitHeight="51.0" fitWidth="55.0" layoutX="725.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
+            <image>
+                <Image url="@../../../../../../Downloads/GREEN%20LOOP.png"/>
+            </image>
+        </ImageView>
     </children>
 </AnchorPane>
