--- a/main/resources/view/Deductions.fxml
+++ b/main/resources/view/Deductions.fxml
@@ -5,8 +5,6 @@
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
@@ -66,11 +64,11 @@
          <font>
             <Font name="System Bold" size="12.0" />
          </font></Button>
-      <ImageView fitHeight="48.0" fitWidth="45.0" layoutX="535.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
+      <!--<ImageView fitHeight="48.0" fitWidth="45.0" layoutX="535.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../../../../../../Downloads/GREEN%20LOOP.png" />
          </image>
-      </ImageView>
+      </ImageView>-->
             <TextField fx:id="txtDeductionName" layoutX="120.0" layoutY="113.0" prefHeight="25.0" prefWidth="383.0" promptText=" " />
             <Label layoutX="20.0" layoutY="117.0" minWidth="100" text="Deduction Name" textFill="WHITE">
          <font>
