--- a/main/resources/view/Ot.fxml
+++ b/main/resources/view/Ot.fxml
@@ -15,7 +15,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="656.0" prefWidth="915.0" style="-fx-background-color: #007a5e;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse73.ems.mvc.employeemanagementsystem.Controller.OTController">
+<AnchorPane prefHeight="656.0" prefWidth="915.0" style="-fx-background-color: #007a5e;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse73.ems.mvc.employeemanagementsystem.Controller.OtController">
 
     <children>
         <VBox alignment="TOP_CENTER" layoutX="30.0" layoutY="20.0" prefHeight="636.0" prefWidth="876.0" spacing="20">
