--- a/main/resources/view/Positions.fxml
+++ b/main/resources/view/Positions.fxml
@@ -38,13 +38,13 @@
                <font>
                   <Font name="System Bold" size="12.0" />
                </font></Label>
-                <TextField fx:id="txtPositionId" prefHeight="25.0" prefWidth="447.0" promptText=" " GridPane.columnIndex="1" GridPane.rowIndex="0" />
+                <TextField fx:id="txtPositionId" prefHeight="25.0" prefWidth="447.0" promptText="P001" GridPane.columnIndex="1" GridPane.rowIndex="0" />
 
                 <Label text="Position Title:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="1">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font></Label>
-                <TextField fx:id="txtPositionTitle" prefHeight="25.0" prefWidth="397.0" promptText=" " GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                <TextField fx:id="txtPositionTitle" prefHeight="25.0" prefWidth="397.0" promptText="eg:Collection Assistant" GridPane.columnIndex="1" GridPane.rowIndex="1" />
 
                 <Label text="Salary Grade:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="2">
                <font>
@@ -60,6 +60,7 @@
 
 
             <HBox alignment="CENTER" spacing="15">
+            <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="95.0" text="Button" />
                 <Button fx:id="btnSave" onAction="#saveOnAction" prefWidth="100" style="-fx-background-color: #ffeaa7;" text="Save">
                <font>
                   <Font name="System Bold" size="12.0" />
