--- a/main/resources/view/Salary.fxml
+++ b/main/resources/view/Salary.fxml
@@ -27,7 +27,7 @@
                <Font name="System Bold" size="12.0" />
             </font></Label>
 
-            <!-- Input Form -->
+
             <GridPane hgap="10" vgap="12">
                 <columnConstraints>
                     <ColumnConstraints halignment="RIGHT" />
@@ -86,9 +86,9 @@
             </rowConstraints>
             </GridPane>
 
-            <!-- Buttons -->
+
             <HBox alignment="CENTER" spacing="15">
-            <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="101.0" style="-fx-background-color: #a29bfe;" text="Add">
+            <Button fx:id="btnAdd" mnemonicParsing="false" onAction="#addOnAction" prefHeight="25.0" prefWidth="101.0" style="-fx-background-color: #a29bfe;" text="Add">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
@@ -105,13 +105,13 @@
                <font>
                   <Font name="System Bold" size="12.0" />
                </font></Button>
-                <Button fx:id="btnClear" onAction="#resetOnAction" prefWidth="100" style="-fx-background-color: #b2bec3;" text="Reset">
+                <Button fx:id="btnReset" onAction="#resetOnAction" prefWidth="100" style="-fx-background-color: #b2bec3;" text="Reset">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font></Button>
             </HBox>
 
-            <!-- Table View -->
+
             <TableView fx:id="tblSalary" prefHeight="250" prefWidth="750">
                 <columns>
                     <TableColumn fx:id="colSalaryId" prefWidth="156.66665267944336" text="Salary ID" />
