--- a/main/resources/view/Task.fxml
+++ b/main/resources/view/Task.fxml
@@ -41,7 +41,7 @@
                <font>
                   <Font name="System Bold" size="12.0" />
                </font></Label>
-                <TextField fx:id="txtEmployeeId" promptText=" " GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                <TextField fx:id="txtEmployeeId" promptText="E001" GridPane.columnIndex="1" GridPane.rowIndex="1" />
 
                 <Label text="Description:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="2">
                <font>
@@ -58,8 +58,8 @@
                <font>
                   <Font name="System Bold" size="12.0" />
                </font></Label>
-            <TextField fx:id="txtStatus" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-            <TextField fx:id="txtDeadline" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <TextField fx:id="txtStatus" promptText="complete/pending..." GridPane.columnIndex="1" GridPane.rowIndex="5" />
+            <TextField fx:id="txtDeadline" promptText="yyyy-mm-dd" GridPane.columnIndex="1" GridPane.rowIndex="3" />
             <rowConstraints>
                <RowConstraints />
                <RowConstraints />
