--- a/main/resources/view/Department.fxml
+++ b/main/resources/view/Department.fxml
@@ -6,8 +6,6 @@
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.image.Image?>
-<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
@@ -16,26 +14,17 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse73.ems.mvc.employeemanagementsystem.Controller.DepartmentController">
+<AnchorPane prefHeight="518.0" prefWidth="813.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse73.ems.mvc.employeemanagementsystem.Controller.DepartmentController">
 
-    <VBox alignment="TOP_CENTER" layoutX="-2.0" prefHeight="463.0" prefWidth="740.0" spacing="15.0" style="-fx-background-color: #007a5e;" AnchorPane.bottomAnchor="-63.0" AnchorPane.leftAnchor="-2.0" AnchorPane.rightAnchor="-4.0" AnchorPane.topAnchor="0.0">
-
-
-        <ImageView fitHeight="39.0" fitWidth="63.0" pickOnBounds="true" preserveRatio="true">
-            <VBox.margin>
-                <Insets left="600.0" top="5.0" />
-            </VBox.margin>
-            <image>
-                <Image url="@../../../../../../Downloads/GREEN%20LOOP.png" />
-            </image>
-        </ImageView>
-
-
-        <Label style="-fx-font-size: 20px; -fx-font-weight: bold;" text="Department Management" textFill="WHITE">
-            <font>
-                <Font size="14.0" />
-            </font>
-        </Label>
+    <VBox alignment="TOP_CENTER" layoutX="-4.0" prefHeight="518.0" prefWidth="819.0" spacing="15.0" style="-fx-background-color: #007a5e;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="-4.0" AnchorPane.rightAnchor="-2.0" AnchorPane.topAnchor="0.0">
+      <Label text="Department Management" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="24.0" />
+         </font>
+         <VBox.margin>
+            <Insets left="5.0" top="10.0" />
+         </VBox.margin>
+      </Label>
 
 
         <GridPane hgap="10.0" vgap="10.0">
@@ -50,7 +39,6 @@
             <font>
                <Font name="System Bold" size="12.0" />
             </font></Label>
-            <TextField fx:id="txtDepartmentId" onAction="#departmentIdOnAction" promptText="Enter Department ID" GridPane.columnIndex="1" GridPane.rowIndex="0" />
 
 
             <Label text="Department Name:" textFill="WHITE" GridPane.columnIndex="0" GridPane.rowIndex="1">
@@ -65,13 +53,11 @@
                <Font name="System Bold" size="12.0" />
             </font></Label>
             <TextField fx:id="txtEmployeeId" onAction="#eIdOnAction" promptText="Enter Employee ID" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-
-
-            <Button fx:id="btnSearch" onAction="#searchOnAction" prefHeight="25.0" prefWidth="89.0" style="-fx-background-color: #FFC107;" text="Search" GridPane.columnIndex="2" GridPane.rowIndex="2">
-                <font>
-                    <Font name="System Bold" size="13.0" />
-                </font>
-            </Button>
+         <Label text="1" textFill="WHITE" GridPane.columnIndex="1">
+            <font>
+               <Font name="System Bold" size="12.0" />
+            </font>
+         </Label>
          <rowConstraints>
             <RowConstraints />
             <RowConstraints />
@@ -80,27 +66,41 @@
         </GridPane>
 
 
-        <HBox alignment="CENTER" spacing="10.0">
-            <Button fx:id="btnAdd" onAction="#addOnAction" prefHeight="25.0" prefWidth="89.0" style="-fx-background-color: #00cec9; -fx-text-fill: white;" text="Add">
+        <HBox alignment="CENTER" prefHeight="30.0" prefWidth="695.0" spacing="10.0">
+            <Button fx:id="btnAdd" onAction="#addOnAction" prefHeight="37.0" prefWidth="103.0" style="-fx-background-color: #00cec9; -fx-text-fill: white;" text="Save">
             <font>
-               <Font name="System Bold" size="12.0" />
+               <Font name="System Bold" size="13.0" />
             </font></Button>
-            <Button fx:id="btnUpdate" onAction="#updateOnAction" prefHeight="25.0" prefWidth="89.0" style="-fx-background-color: #2196F3; -fx-text-fill: white;" text="Update">
+            <Button fx:id="btnUpdate" onAction="#updateOnAction" prefHeight="33.0" prefWidth="105.0" style="-fx-background-color: #2196F3; -fx-text-fill: white;" text="Update">
             <font>
-               <Font name="System Bold" size="12.0" />
+               <Font name="System Bold" size="13.0" />
             </font></Button>
-            <Button fx:id="btnDelete" onAction="#deleteOnAction" prefHeight="25.0" prefWidth="89.0" style="-fx-background-color: #f44336; -fx-text-fill: white;" text="Delete">
+            <Button fx:id="btnDelete" onAction="#deleteOnAction" prefHeight="30.0" prefWidth="105.0" style="-fx-background-color: #f44336; -fx-text-fill: white;" text="Delete">
             <font>
-               <Font name="System Bold" size="12.0" />
+               <Font name="System Bold" size="13.0" />
             </font></Button>
+
+
+            <Button fx:id="btnSearch" onAction="#searchOnAction" prefHeight="27.0" prefWidth="93.0" style="-fx-background-color: #FFC107;" text="Search">
+                <font>
+                    <Font name="System Bold" size="13.0" />
+                </font>
+            </Button>
+         <VBox.margin>
+            <Insets left="100.0" top="10.0" />
+         </VBox.margin>
         </HBox>
 
 
-        <TableView fx:id="tblDepartment" onSort="#tblOnAction" prefHeight="204.0" prefWidth="718.0">
+        <TableView fx:id="tblDepartment" prefHeight="256.0" prefWidth="759.0">
             <columns>
-                <TableColumn fx:id="colDepartmentId" prefWidth="200.0" text="Department ID" />
-                <TableColumn fx:id="colDepartmentName" prefWidth="538.6666717529297" text="Department Name" />
+                <TableColumn fx:id="colDepartmentId" prefWidth="126.666659116745" text="Department ID" />
+                <TableColumn fx:id="colEmployeeId" minWidth="0.0" prefWidth="159.99998474121094" text="Employee ID" />
+            <TableColumn fx:id="colDepartmentName" prefWidth="498.0000305175781" text="Department Name" />
             </columns>
+         <VBox.margin>
+            <Insets left="30.0" right="30.0" top="30.0" />
+         </VBox.margin>
         </TableView>
 
     </VBox>
